# Audio-Bars

./: .gitignore  README.md  ascii.py  audio.py  bar.py  main.py  pyproject.toml  requirements.txt  thumbnail.py  transcriber.py
