[project]
name = "audio-bars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "numpy>=2.4.1",
    "py-now-playing>=0.1.0",
    "pyaudiowpatch>=0.2.12.8",
    "pyinstaller>=6.18.0",
    "winnplib>=0.1.4",
    "yt-dlp>=2025.12.8",
]
